--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <header>
       <div class="nav">
         <a class="brand" href="/">
-          <img src="https://lh3.googleusercontent.com/sitesv/AICyYda8czSBDnkyJ66DBJqOC1gy3xN8i1Qf3BV8sn5RPUKFtmvOfN_4yguHEDZfdcnXSp5mtShVVCy_V7yShoF9-jKxqYLrf0adSCaD6jVVYIkVGZ5FyfFletlV1UKi0oztQheIk_fplpIkHW5eZqtPr-PJ4z4XbCBzPZS0bWhdKdAKaEPIqjAuLm5d=w16383" alt="Khwaab logo" />
+          <img src="https://mwrcnklxgdrasab7.public.blob.vercel-storage.com/khwaablogo.png" alt="Khwaab logo" />
           <strong>Khwaab Events</strong>
         </a>
         <span class="pill"><span class="dot"></span> Mira is online</span>
@@ -246,3 +246,4 @@
   </script>
 </body>
 </html>
+
