--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Khwaab • Talk to Mira</title>
+  <link rel="icon" href="/khwaab_favicon.ico" type="image/x-icon" />
   <meta name="description" content="Chat with Mira — Khwaab's AI décor specialist." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -246,4 +247,5 @@
   </script>
 </body>
 </html>
+
 
